--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev": "dead-server --host=localhost --port=2020",
+    "dev2": "dead-server --port=2002",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
